# tayu-procon

./: .gitignore  Cargo.toml  LICENSE  README.md  all-test.sh  rustfmt.toml
convolution/: Cargo.toml
convolution-simd/: Cargo.toml
convolution-simd/examples/: arbitrary-convolution.rs  convolution-large.rs  convolution-mod1000000007.rs  convolution-mod2-64.rs  convolution.rs  fast-fourier-transform.rs
convolution-simd/src/: arbitrary_modulo_convolution.rs  common.rs  cooley_tukey.rs  fft_cache.rs  gentleman_sande.rs  large_convolution.rs  lib.rs  six_step.rs  traits.rs
convolution-simd/tests/: convolution.rs  cooley-tukey.rs  gentleman-sande.rs  ntt.rs
convolution/examples/: arbitrary-convolution.rs  convolution-large.rs  convolution-mod1000000007.rs  convolution-mod2-64.rs  convolution.rs  fast-fourier-transform.rs
convolution/src/: arbitrary_modulo_convolution.rs  common.rs  cooley_tukey.rs  fft_cache.rs  gentleman_sande.rs  large_convolution.rs  lib.rs  ntt.rs  simd.rs
convolution/tests/: convolution.rs
cpgraph/: Cargo.toml
cpgraph/examples/: bellman_ford_abc137e.rs  bellman_ford_abc61d.rs  biconnected_components.rs  cycle_detection_directed.rs  cycle_detection_undirected.rs  eulerian_trail_directed.rs  eulerian_trail_undirected.rs  jump_on_tree.rs  lca.rs  lca_hld.rs  manhattan_mst.rs  minimum_spanning_tree.rs  scc.rs  shortest_path.rs  topological_sort_abc223d.rs  topological_sort_tenka1-2016.rs  tree_diameter.rs  two_edge_connected_components.rs
cpgraph/src/: bellman_ford.rs  cycle_detect.rs  dijkstra.rs  eulerian_trail.rs  lib.rs  low_link.rs  mst.rs  scc.rs  shortest_path.rs  topological_sort.rs  warshall_floyd.rs
ds/: Cargo.toml  run.rs
ds/examples/: btree-multiset.rs  cartesian-tree.rs  double-ended-priority-queue.rs  dynamic-graph-vertex-add-component-sum.rs  dynamic-segtree.rs  dynamic-sequence-range-affine-range-sum.rs  dynamic-sorted-sequence-abc372e.rs  dynamic-sorted-sequence-past10m.rs  dynamic-sorted-sequence-past9m.rs  dynamic-tree-subtree-add-subtree-sum.rs  dynamic-tree-vertex-add-path-sum.rs  dynamic-tree-vertex-add-subtree-sum.rs  dynamic-tree-vertex-set-path-composite.rs  line-add-get-min.rs  link-cut-tree-njpc2017h.rs  lowest-common-ancestor-lct.rs  ordered-set.rs  point-set-range-composite.rs  range-affine-range-sum.rs  range-kth-smallest.rs  range-reverse-range-sum.rs  rectangle-sum.rs  segment-add-get-min.rs  segment-tree.rs  static-range-count-distinct.rs  static-range-frequency.rs  static-range-mode-query.rs  vertex-add-subtree-sum.rs
ds/src/: btree_multiset.rs  cartesian_tree.rs  dynamic_sequence.rs  euler_tour_tree.rs  fixed_ring_queue.rs  interval_heap.rs  lib.rs  link_cut_tree.rs  online_dynamic_connectivity.rs  splay_tree.rs  wavelet_matrix.rs
ds/tests/: btree_multiset.rs  ring_queue.rs
flow/: Cargo.toml
flow/examples/: ford-fulkerson.rs  matching-on-bipartite-graph.rs  max-flow.rs  minimum-cut-restoration.rs
flow/src/: ford_fulkerson.rs  hopcroft_karp.rs  lib.rs
graph/: Cargo.toml
graph/examples/: cycle-detection.rs  lca-by-hld.rs  lowest-common-ancestor.rs  manhattan_mst.rs  minimum-spanning-tree.rs  shortest-path.rs  strongly-connected-components.rs  tree-diameter.rs  vertex-add-path-sum.rs  vertex-set-path-composite.rs
graph/src/: bellman_ford.rs  cycle_detect.rs  dijkstra.rs  error.rs  euler_tour.rs  graph_inner.rs  graphlike.rs  heavy_light_decomposition.rs  lca.rs  lib.rs  low_link.rs  nth_ancestor.rs  scc.rs  spanning_tree.rs  topological_sort.rs  tree.rs  warshall_floyd.rs
iolib/: Cargo.toml
iolib/examples/: many-aplusb.rs  predecessor-problem.rs  scan.rs
iolib/src/: ext.rs  input.rs  lib.rs  output.rs  parse_number.rs
math/: Cargo.toml
math/benches/: divisor_enumeration.rs
math/examples/: baby-step-giant-step.rs  chinese-remainder-theorem.rs  counting-primes.rs  discrete-logarithm.rs  enumerate-primes.rs  enumerate-quotients.rs  factorize.rs  garner.rs  primality-test.rs  primitive-root.rs  sqrt-mod.rs
math/src/: const_methods.rs  lib.rs  montgomery.rs  sieve.rs
matrix/: Cargo.toml
matrix/examples/: affine-transform.rs  determinant-of-matrix-arbitrary-mod.rs  determinant-of-matrix.rs  matrix-product.rs  maximum-matching.rs  pow-of-matrix.rs  rank-of-matrix.rs
matrix/src/: affine_transform.rs  convert.rs  determinant.rs  element.rs  fixed.rs  lib.rs  product.rs  rank.rs  square.rs
modint/: Cargo.toml
modint/arbitrary-modint/: Cargo.toml
modint/arbitrary-montgomery-modint/: Cargo.toml
modint/modint-common/: Cargo.toml
modint/montgomery-modint/: Cargo.toml
modint/src/: dynamic_modint.rs  dynamic_montgomery_modint.rs  lib.rs  modulo.rs  montgomery_modint.rs
modint/static-modint/: Cargo.toml
number-theoretic-transform/: Cargo.toml
number-theoretic-transform/benches/: cooley-tukey.rs  gentleman-sande.rs  ntt.rs
number-theoretic-transform/ntt-radix2/: Cargo.toml
number-theoretic-transform/ntt-radix4/: Cargo.toml
number-theoretic-transform/ntt-six-step/: Cargo.toml
number-theoretic-transform/src/: cooley_tukey.rs  fft_cache.rs  gentleman_sande.rs  lib.rs  traits.rs  utility.rs
number-theoretic-transform/tests/: cooley-tukey.rs  gentleman-sande.rs  ntt.rs
polynomial/: Cargo.toml
polynomial/examples/: division-of-polynomials.rs  exp-of-formal-power-series.rs  find-linear-recurrence.rs  interpolation-and-eval-arc33.rs  interpolation-non-ntt-friendly.rs  inv-of-formal-power-series.rs  kth-term-of-linearly-recurrent-sequence.rs  log-of-formal-power-series.rs  multipoint-evaluation-on-geometric-sequence.rs  multipoint-evaluation.rs  polynomial-interpolation-on-geometric-sequence.rs  polynomial-interpolation.rs  polynomial-taylor-shift.rs  pow-of-formal-power-series.rs  product-of-polynomial-sequence.rs  sqrt-of-formal-power-series.rs
polynomial/src/: impl_ops.rs  lib.rs  ntt_friendly.rs
segtree/: Cargo.toml
segtree/examples/: dynamic-segtree.rs  line-add-get-min.rs  point-set-range-composite.rs  range-affine-range-sum.rs  segment-add-get-min.rs  segment-tree.rs
segtree/src/: lazy_segtree.rs  lib.rs
suffix-array/: Cargo.toml
suffix-array/src/: lib.rs
(+170 files in other folders)
