[package]
name = "tayu-procon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitset = { path = "./bitset" }
complex = { path = "./complex" }
convolution = { path = "./convolution" }
convolution-simd = { path = "./convolution-simd" }
fenwick-tree = { path = "./fenwick-tree" }
flow = { path = "./flow" }
geometry = { path = "./geometry" }
graph = { path = "./graph" }
iolib = { path = "./iolib" }
math = { path = "./math" }
matrix = { path = "./matrix" }
mincost-flow = { path = "./mincost-flow" }
modint = { path = "./modint" }
numeric = { path = "./numeric" }
polynomial = { path = "./polynomial" }
rational = { path = "./rational" }
segtree = { path = "./segtree" }
simple-rand = { path = "./simple-rand" }
string = { path = "./string" }
suffix-array = { path = "./suffix-array" }
trie = { path = "./trie" }
unionfind = { path = "./unionfind" }
utility = { path = "./utility" }
wavelet-matrix = { path = "./wavelet-matrix" }

[dev-dependencies]
rand = "0.8.5"
proconio = "0.4.3"

[[example]]
name = "io"
