[package]
name = "convolution-simd"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
modint = { path = "../modint" }
math = { path = "../math" }

[dev-dependencies]
iolib = { path = "../iolib" }
proconio = { version = "0.4.3", features = ["derive"] }