[package]
name = "convolution-simd"
version = "0.1.0"
edition = "2021"
license = "CC0-1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
math = { path = "../math" }
montgomery-modint = { version = "0.1.0", path = "../modint/montgomery-modint" }

[dev-dependencies]
iolib = { path = "../iolib" }
proconio = { version = "0.4.3", features = ["derive"] }
