[package]
name = "convolution"
version = "0.1.0"
edition = "2021"
license = "CC0-1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
montgomery-modint = { version = "0.1.0", path = "../modint/montgomery-modint" }
number-theoretic-transform = { version = "0.1.0", path = "../number-theoretic-transform" }

[dev-dependencies]
iolib = { package = "iolib", path = "../iolib" }
proconio = { version = "0.4.3", features = ["derive"] }

[lib]
doctest = false

[features]
default = ["large-convolution", "arbitrary-modulo-convolution"]
large-convolution = []
arbitrary-modulo-convolution = []

[profile.release]
debug = true

[[example]]
name = "convolution-large"
required-features = ["large-convolution"]

[[example]]
name = "convolution-mod2-64"
required-features = ["arbitrary-modulo-convolution"]

[[example]]
name = "convolution-mod1000000007"
required-features = ["arbitrary-modulo-convolution"]

[[example]]
name = "arbitrary-convolution"
required-features = ["arbitrary-modulo-convolution"]

[[test]]
name = "convolution"
required-features = ["arbitrary-modulo-convolution", "large-convolution"]
