[package]
name = "ds"
version = "0.1.0"
edition = "2021"
license = "CC0-1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
iolib = { path = "../iolib" }
proconio = "0.4.5"
rand = "0.8.5"
static-modint = { path = "../modint/static-modint" }

[features]
default = []
full = [
  "fixed-ring-queue",
  "btree-multiset",
  "double-ended-priority-queue",
  "link-cut-tree",
]
fixed-ring-queue = []
btree-multiset = []
double-ended-priority-queue = []
link-cut-tree = []

[[test]]
name = "ring_queue"
required-features = ["full"]

[[test]]
name = "btree_multiset"
required-features = ["full"]

[[example]]
name = "btree-multiset"
required-features = ["full"]

[[example]]
name = "double-ended-priority-queue"
required-features = ["full"]

[[example]]
name = "dynamic-tree-vertex-add-path-sum"
required-features = ["full"]

[[example]]
name = "dynamic-tree-vertex-set-path-composite"
required-features = ["full"]

[[example]]
name = "link-cut-tree-njpc2017h"
required-features = ["full"]

[[example]]
name = "lowest-common-ancestor-lct"
required-features = ["full"]
