[package]
name = "ds"
version = "0.1.0"
edition = "2021"
license = "CC0-1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc-hash = { version = "1.1.0", optional = true }
static-modint = { path = "../modint/static-modint", optional = true }

[dev-dependencies]
static-modint = { path = "../modint/static-modint" }
proconio = "0.4.5"
rand = "0.8.5"
cpio = { path = "../cpio" }
unionfind = { path = "../unionfind" }

[features]
default = ["full"]
full = [
  "btree-multiset",
  "cartesian-tree",
  "double-ended-priority-queue",
  "dynamic-sequence",
  "euler-tour-tree",
  "fixed-ring-queue",
  "link-cut-tree",
  "modint",
  "online-dynamic-connectivity",
  "segtree",
  "splay-tree",
  "wavelet-matrix",
]
btree-multiset = []
cartesian-tree = []
double-ended-priority-queue = []
dynamic-sequence = ["splay-tree"]
euler-tour-tree = ["splay-tree"]
fixed-ring-queue = []
link-cut-tree = []
online-dynamic-connectivity = ["euler-tour-tree"]
segtree = []
splay-tree = []
modint = ["dep:static-modint"]
rustc-hash = ["dep:rustc-hash"]
wavelet-matrix = []

[profile.release]
debug = true

[[test]]
name = "ring_queue"
required-features = ["full"]

[[test]]
name = "btree_multiset"
required-features = ["full"]

[[example]]
name = "btree-multiset"
required-features = ["full"]

[[example]]
name = "double-ended-priority-queue"
required-features = ["full"]

[[example]]
name = "dynamic-tree-vertex-add-path-sum"
required-features = ["full"]

[[example]]
name = "dynamic-tree-vertex-set-path-composite"
required-features = ["full"]

[[example]]
name = "link-cut-tree-njpc2017h"
required-features = ["full"]

[[example]]
name = "lowest-common-ancestor-lct"
required-features = ["full"]

[[example]]
name = "cartesian-tree"
required-features = ["full"]

[[example]]
name = "dynamic-graph-vertex-add-component-sum"
required-features = ["full"]

[[example]]
name = "range-affine-range-sum"
required-features = ["full", "modint"]
