[package]
name = "flow"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
numeric = { path = "../numeric" }

[dev-dependencies]
proconio = { version = "0.3.8" }
iolib = { path = "../iolib" }