[package]
name = "flow"
version = "0.1.0"
edition = "2021"
license = "CC0-1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
numeric = { path = "../numeric" }
zero-one = { version = "0.1.0", path = "../numeric/zero-one" }

[dev-dependencies]
iolib = { path = "../iolib" }
proconio = "0.4.5"
