[package]
name = "graph"
version = "0.1.0"
edition = "2021"
license = "CC0-1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unionfind = { path = "../unionfind" }

[dev-dependencies]
fenwick-tree = { path = "../fenwick-tree" }
iolib = { path = "../iolib" }
montgomery-modint = { path = "../modint/montgomery-modint" }
segtree = { path = "../segtree" }
