[package]
name = "iolib"
version = "0.1.0"
edition = "2021"
license = "CC0-1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ds = { version = "0.1.0", git = "https://github.com/tayu0110/tayu-procon.git", default-features = false, features = [
  "fixed-ring-queue",
] }

[profile.release]
debug = true
