[package]
name = "math"
version = "0.1.0"
edition = "2021"
license = "CC0-1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
numeric = { package = "numeric", path = "../numeric" }
arbitrary-montgomery-modint = { version = "0.1.0", path = "../modint/arbitrary-montgomery-modint" }
simple-rand = { package = "simple-rand", path = "../simple-rand" }

[dev-dependencies]
iolib = { package = "iolib", path = "../iolib" }
