[package]
name = "math"
version = "0.1.0"
edition = "2021"
license = "CC0-1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arbitrary-modint = { version = "0.1.0", path = "../modint/arbitrary-modint", optional = true }
simple-rand = { package = "simple-rand", path = "../simple-rand" }

[dev-dependencies]
cpio = { package = "cpio", version = "0.1.0", git = "https://github.com/tayu0110/tayu-procon.git" }
rand = "0.8.5"

[features]
# default = ["const_methods"]
const_methods = ["dep:arbitrary-modint"]

[profile.release]
debug = 1
