[package]
name = "matrix"
version = "0.1.0"
edition = "2021"
license = "CC0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
modint = { path = "../modint" }
numeric = { package = "numeric", path = "../numeric" }

[dev-dependencies]
iolib = { path = "../iolib" }
proconio = { version = "0.3.8" }
