[package]
name = "modint"
version = "0.1.0"
edition = "2021"
license = "CC0-1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arbitrary-modint = { version = "0.1.0", path = "arbitrary-modint" }
arbitrary-montgomery-modint = { version = "0.1.0", path = "arbitrary-montgomery-modint" }
modint-common = { version = "0.1.0", path = "modint-common" }
montgomery-modint = { version = "0.1.0", path = "montgomery-modint" }
static-modint = { version = "0.1.0", path = "static-modint" }
