[package]
name = "segtree"
version = "0.1.0"
edition = "2021"
license = "CC0-1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
static-modint = { version = "0.1.0", path = "../modint/static-modint" }
zero-one = { version = "0.1.0", path = "../numeric/zero-one" }

[dev-dependencies]
iolib = { path = "../iolib" }
rand = "0.8.5"

[profile.release]
debug = true
