[package]
name = "suffix-array"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[dev-dependencies]
iolib = { package = "iolib", path = "../iolib" }

[profile.release]
# debug = true
