[package]
name = "suffix-array"
version = "0.1.0"
edition = "2021"
license = "CC0-1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[dev-dependencies]
iolib = { package = "iolib", path = "../iolib" }
proconio = { version = "0.3.8", features = ['derive'] }

[profile.release]
debug = 1
