[package]
name = "montgomery-modint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iolib = { version = "0.1.0", path = "../../iolib" }
modint-common = { version = "0.1.0", path = "../modint-common" }
numeric = { version = "0.1.0", path = "../../numeric" }
