[package]
name = "montgomery-modint"
version = "0.1.0"
edition = "2021"
license = "CC0-1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iolib = { version = "0.1.0", path = "../../iolib", optional = true }
modint-common = { version = "0.1.0", path = "../modint-common" }
zero-one = { version = "0.1.0", path = "../../numeric/zero-one" }

[lib]
doctest = false

[features]
default = []
iolib = ["dep:iolib"]
