[package]
name = "static-modint"
version = "0.1.0"
edition = "2021"
license = "CC0-1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
modint-common = { version = "0.1.0", path = "../modint-common" }
numeric = { version = "0.1.0", path = "../../numeric" }
