[package]
name = "ntt-radix4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
montgomery-modint = { version = "0.1.0", path = "../../modint/montgomery-modint" }

[dev-dependencies]
iolib = { path = "../../iolib" }
proconio = { version = "0.4.3", features = ["derive"] }
